Changing users to contacts for consistency
